--- a/Latex Document/tables/correlationTable.tex
+++ b/Latex Document/tables/correlationTable.tex
@@ -1,4 +1,4 @@
-\begin{tiny}\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
 &\textbf{07}&\textbf{10}&\textbf{12}&\textbf{17}&\textbf{20}&\textbf{28}&\textbf{31}&\textbf{32}&\textbf{33}&\textbf{34}&\textbf{35}&\textbf{36}\\\hline
 \textbf{07}&1.00&0.93&0.07&0.37&0.07&0.05&0.22&0.20&0.21&0.22&-Inf&0.16\\\hline
@@ -14,4 +14,3 @@
 \textbf{35}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&-Inf&-0.00\\\hline
 \textbf{36}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&1.00\\\hline
 \end{tabular}
-\end{tiny}
